#7391 fix text truncated too soon in foldout preview (#7392)

--- a/js/notebook/src/shared/style/beakerx.scss
+++ b/js/notebook/src/shared/style/beakerx.scss
@@ -124,7 +124,6 @@ $focusColor: #66bb6a;
     font-size: 14px;
     line-height: 1.3em;
     flex-grow: 1;
-    max-width: 600px;
     text-indent: 0;
     transition: opacity 0.1s ease-in-out;
     padding: 0 15px;
