--- a/js/notebook/src/shared/style/spark.scss
+++ b/js/notebook/src/shared/style/spark.scss
@@ -18,6 +18,7 @@
   & > .bx-spark-stagePanel {
     padding: 0 15px;
     max-width: 600px;
+    margin: 0;
   }
 }
 
